# agent-wiki

./: .gitignore  .gitmodules  INTEGRATED_STATUS.md  README.md  SENTER.md  SENTER_AGENT.md  goop-nesting.md  goop-whitepaper.md  log.md  pyproject.toml  spec.md
catalogs/: agent-roster.md  fleet-dashboard.md  loop-registry.md  skill-registry.md  topic-index.md
sandbox/: .gitignore  Dockerfile  README.md  docker-compose.yml
sandbox/android-surface/: README.md  index.html
sandbox/goop/: ANDROID.md  ANDROID_BRIDGE.json  ANDROID_SURFACE.json  EIKON.md  EIKON_REGISTRY.json  HERM_FRONTEND.md  PETDEX.md  SENTER.md  STS.md  STS_CONFIG.json  WHOLE_FLOW.json  android_bridge.py  android_runner.py  smoke_android_bridge.py  validate_android_bridge.py  validate_android_surface.py  validate_owl_source.py  validate_whole_flow.py
sandbox/goop/profiles/base/: CHAT.md  SENTER.md  SESSIONS.md
sandbox/goop/profiles/media/: MEDIA.md
sandbox/goop/profiles/research/: RESEARCH.md
sandbox/goop/profiles/wallet/: WALLET.md
scripts/: run_home_tui.sh  verify_all.sh  verify_system.py
senter_agent/: __init__.py  __main__.py  cli.py  factories.py  gepa.py  model.py  parser.py  planner.py  queue.py  runtime.py  sts.py
tests/: test_android_bridge.py  test_android_runner.py  test_factories.py  test_gepa.py  test_runtime.py  test_senter_agent.py  test_sts.py  test_surfaces.py  test_whole_flow.py
