[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "senter-agent"
version = "0.1.0"
description = "Markdown-native GOOP planner for the Senter Agent"
requires-python = ">=3.11"

[project.scripts]
senter-agent = "senter_agent.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["senter_agent*"]
